fix z-index with navbar blob

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,7 +53,7 @@ nav path {
 }
 
 #logo {
-  z-index: 1;
+  z-index: 2;
   /* content:url("../images/Symbols/appeciate\ logo.png"); */
   width: 90px;
   height: 90px;
@@ -95,7 +95,7 @@ nav ul li {
   border: 0;
   cursor: pointer;
   display: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 a {
@@ -584,6 +584,7 @@ iframe {
     right: 0;
     transform: translateY(-50%);
     animation: fadeIn 0.5s linear;
+    z-index: 1;
   }
 }
 
